--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ link_directories(${OXYGINE_LIBRARY_DIRS})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OXYGINE_CXX_FLAGS}")
 
-add_executable(Snake src/main.cpp src/Objects/Direction.h src/consts.h
+add_executable(Snake src/main.cpp src/Objects/Direction.h
 		src/init.cpp src/Snake/SnakeBody.cpp src/Snake/Snake.cpp src/Snake/Brain.cpp
 		src/init.h src/Snake/Snake.h src/Snake/SnakeBody.h src/Snake/Brain.h src/Objects/Position.h src/Objects/WillMove.h src/Objects/Size.h src/Objects/StepSize.h)
 target_link_libraries(Snake ${OXYGINE_CORE_LIBS})
