--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OXYGINE_CXX_FLAGS}")
 
 add_executable(Snake src/main.cpp src/Objects/Direction.h
 		src/init.cpp src/Snake/SnakeBody.cpp src/Snake/SnakeNervousSystem.cpp
-		src/init.h src/Snake/SnakeNervousSystem.h src/Snake/SnakeBody.h src/Objects/Position.h src/Objects/WillMove.h src/Objects/Size.h src/Objects/StepSize.h src/Food/IFood.h src/Food/SmallFood.cpp src/Food/SmallFood.h)
+		src/init.h src/Snake/SnakeNervousSystem.h src/Snake/SnakeBody.h src/Objects/Position.h src/Objects/WillMove.h src/Objects/Size.h src/Objects/StepSize.h src/Food/IFood.h src/Food/SmallFood.cpp src/Food/SmallFood.h src/System/Game.cpp src/System/Game.h)
 target_link_libraries(Snake ${OXYGINE_CORE_LIBS})
 
 
